# beitlab-gemma4-vla

./: .gitignore  CODEX_README.md  MIGRATION_PROMPT.md  MULTI_MACHINE_TRAINING.md  README.md  ROADMAP.md  clean_outputs.py  docker-compose.mlflow.yml  mlflow.db  pyproject.toml  requirements.txt  setup.py  uv-shell
configs/: base_config.yaml
docker/mlflow/: Dockerfile
docs/: 01_config.md  02_flow_matching.md  03_action_expert.md  04_model.md  05_dataset.md  06_training.md  07_inference.md  08_simulation.md  09_multi_camera.md  10_multi_camera_two_stage.md  11_architecture_diagrams.md  README.md  architecture.md  training_strategies.html
examples/: 01_quick_start.py  03_custom_robot.py  04_evaluate.py  README.md
robots/: __init__.py
robots/metaworld/: __init__.py  cached_dataset.py  dataset.py  env.py  visualize.py
robots/metaworld/configs/: metaworld_push.yaml  metaworld_push_expert_only.yaml  metaworld_push_full.yaml  metaworld_push_m3.yaml  metaworld_push_multicam_stage1.yaml  metaworld_push_multicam_stage2.yaml
robots/metaworld/scripts/: cache_features.py  collect_data.py  inspect_dataset.py  test.py  train.py  train_cached.py
src/gemma4_vla/: __init__.py  action_expert.py  config.py  dataset.py  flow_matching.py  inference.py  machine_config.py  model.py  observability.py  stats.py  train.py
tests/: test_action_expert.py  test_config.py  test_dataset.py  test_flow_matching.py  test_inference.py
